My head is in shambles but the wall.... it has more layers. With bone exposed I keep on bashing. Also, I can click the fish now so that's neat